--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "qrcode": "^1.5.3",
-    "solid-js": "^1.8.15"
+    "solid-js": "^1.8.15",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^20.14.2",
     "@types/qrcode": "^1.5.5",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
