--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@felte/solid": "^1.2.13",
@@ -23,7 +24,11 @@
     "@types/node": "^20.14.2",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.19",
+    "husky": "^9.1.0",
+    "lint-staged": "^15.2.7",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
