show toast notification on qr generation error

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
     "@felte/solid": "^1.2.13",
-    "@kobalte/core": "^0.13.3",
+    "@kobalte/core": "^0.13.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "i18next": "^23.12.1",
