--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prettier:check": "prettier . --check",
+    "prettier:write": "prettier . --write"
   },
   "dependencies": {
     "@felte/solid": "^1.2.13",
@@ -21,16 +22,17 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/node": "^20.14.2",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.19",
-    "husky": "^9.1.0",
-    "lint-staged": "^15.2.7",
+    "globals": "^15.9.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.1.0",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
   }
